fix: remove Java 11 APIs and enforce Java 8 release